// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When report and report definition are empty 1`] = `
<div>
  <div
    className="row p-3"
    style={
      Object {
        "display": "none",
      }
    }
  >
    <div
      className="col-md-4"
    >
      <label
        style={
          Object {
            "lineHeight": "36px",
          }
        }
      >
        Chart type
      </label>
    </div>
    <div
      className="col-md-8"
    >
      <select
        className="form-control"
        onChange={[Function]}
        value=""
      />
    </div>
  </div>
  <canvas
    style={
      Object {
        "display": "none",
      }
    }
  />
  <div
    className="alert alert-warning mt-3"
    style={
      Object {
        "display": "block",
      }
    }
  >
    Network analysis data not available. Run a new network analysis to see results.
  </div>
  <pre
    style={
      Object {
        "display": "none",
      }
    }
  />
  <button
    className="btn btn-primary pull-left"
    onClick={[Function]}
  >
    Reports
  </button>
  <Component />
</div>
`;

exports[`When report and report definition are given 1`] = `
<div>
  <div
    className="row p-3"
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      className="col-md-4"
    >
      <label
        style={
          Object {
            "lineHeight": "36px",
          }
        }
      >
        Chart type
      </label>
    </div>
    <div
      className="col-md-8"
    >
      <select
        className="form-control"
        onChange={[Function]}
        value=""
      >
        <option
          key="irr"
          value="irr"
        >
          IRR
        </option>
      </select>
    </div>
  </div>
  <canvas
    style={
      Object {
        "display": "block",
      }
    }
  />
  <div
    className="alert alert-warning mt-3"
    style={
      Object {
        "display": "none",
      }
    }
  >
    Network analysis data not available. Run a new network analysis to see results.
  </div>
  <pre
    style={
      Object {
        "display": "none",
      }
    }
  />
  <button
    className="btn btn-primary pull-left"
    onClick={[Function]}
  >
    Reports
  </button>
  <Component />
</div>
`;

exports[`When report definition is empty 1`] = `
<div>
  <div
    className="row p-3"
    style={
      Object {
        "display": "none",
      }
    }
  >
    <div
      className="col-md-4"
    >
      <label
        style={
          Object {
            "lineHeight": "36px",
          }
        }
      >
        Chart type
      </label>
    </div>
    <div
      className="col-md-8"
    >
      <select
        className="form-control"
        onChange={[Function]}
        value=""
      />
    </div>
  </div>
  <canvas
    style={
      Object {
        "display": "none",
      }
    }
  />
  <div
    className="alert alert-warning mt-3"
    style={
      Object {
        "display": "block",
      }
    }
  >
    Network analysis data not available. Run a new network analysis to see results.
  </div>
  <pre
    style={
      Object {
        "display": "none",
      }
    }
  />
  <button
    className="btn btn-primary pull-left"
    onClick={[Function]}
  >
    Reports
  </button>
  <Component />
</div>
`;

exports[`When report is empty 1`] = `
<div>
  <div
    className="row p-3"
    style={
      Object {
        "display": "none",
      }
    }
  >
    <div
      className="col-md-4"
    >
      <label
        style={
          Object {
            "lineHeight": "36px",
          }
        }
      >
        Chart type
      </label>
    </div>
    <div
      className="col-md-8"
    >
      <select
        className="form-control"
        onChange={[Function]}
        value=""
      >
        <option
          key="irr"
          value="irr"
        >
          IRR
        </option>
      </select>
    </div>
  </div>
  <canvas
    style={
      Object {
        "display": "none",
      }
    }
  />
  <div
    className="alert alert-warning mt-3"
    style={
      Object {
        "display": "block",
      }
    }
  >
    Network analysis data not available. Run a new network analysis to see results.
  </div>
  <pre
    style={
      Object {
        "display": "none",
      }
    }
  />
  <button
    className="btn btn-primary pull-left"
    onClick={[Function]}
  >
    Reports
  </button>
  <Component />
</div>
`;
